--- a/frontend/pages/catalog/CatalogPage.module.css
+++ b/frontend/pages/catalog/CatalogPage.module.css
@@ -19,19 +19,19 @@
 	grid-template-columns: 200px 1fr;
 	gap: 39px 109px;
 	grid-template-areas:
-		"searchBar searchBar"
-		"filtersBar catalog";
+		"navContainer navContainer"
+		"filtersSideBar catalog";
 }
 
-.content__searchBar {
-	grid-area: searchBar;
+.content__navContainer {
+	grid-area: navContainer;
 
 	display: grid;
 	gap: 20px 0;
 }
 
-.content__filtersBar {
-	grid-area: filtersBar;
+.content__filtersSideBar {
+	grid-area: filtersSideBar;
 
 	display: grid;
 	gap: 40px 0;
