--- a/frontend/components/OfferCard/components/OfferHeader/OfferHeader.module.css
+++ b/frontend/components/OfferCard/components/OfferHeader/OfferHeader.module.css
@@ -5,7 +5,8 @@
 		"slider title"
 		"slider price"
 		"slider info"
-		"slider info";
+		"slider info"
+		"slider .";
 	gap: 35px 48px;
 
 	margin: 0 0 50px;
@@ -13,6 +14,42 @@
 
 .offer__slider {
 	grid-area: slider;
+}
+
+.offer__caption {
+	color: var(--grey-500);
+
+	font-family: var(--TTNorms);
+	font-size: 14px;
+	font-weight: 400;
+	font-style: normal;
+	line-height: 24px;
+	max-width: 200px;
+	text-overflow: ellipsis;
+}
+
+.offer__additional {
+	display: flex;
+	flex-direction: column;
+
+	width: 100%;
+	max-width: 390px;
+	margin: 0;
+
+	word-wrap: break-word;
+
+	color: var(--grey-600);
+
+	font-family: var(--TTNorms);
+	font-size: 16px;
+	font-weight: 400;
+	font-style: normal;
+	line-height: 30px;
+	grid-area: seller;
+}
+
+.offer__link {
+	width: fit-content;
 }
 
 .offer__title {
@@ -33,6 +70,10 @@
 	gap: 15px 0;
 }
 
+.offer__type {
+	composes: offer__caption;
+}
+
 .offer__price {
 	width: 100%;
 	max-width: 280px;
@@ -50,37 +91,25 @@
 	grid-area: price;
 }
 
-.offer__additionalInfo {
+.offer__additionalInfoWrapper {
 	grid-area: info;
-}
-
-
-.offer__seller {
 	display: flex;
 	flex-direction: column;
+	gap: 35px 0;
+}
 
-	width: 100%;
-	max-width: 390px;
-	margin: 0;
+.offer__categories {
+	composes: offer__additional;
+}
 
-	word-wrap: break-word;
-
+.offer__seller {
+	composes: offer__additional;
 	color: var(--link);
-
-	font-family: var(--TTNorms);
-	font-size: 16px;
-	font-weight: 400;
-	font-style: normal;
-	line-height: 30px;
-	grid-area: seller;
 }
 
-.offer__caption {
-	color: var(--grey-500);
 
-	font-family: var(--TTNorms);
-	font-size: 14px;
-	font-weight: 400;
-	font-style: normal;
-	line-height: 24px;
-}
+
+
+
+
+
