--- a/frontend/components/OfferCard/OfferCard.module.css
+++ b/frontend/components/OfferCard/OfferCard.module.css
@@ -2,6 +2,8 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+	box-sizing: border-box;
+	padding: 0 0 85px 0;
 
 	max-width: 922px;
 }
