--- a/frontend/components/Checkbox/Checkbox.module.css
+++ b/frontend/components/Checkbox/Checkbox.module.css
@@ -31,7 +31,7 @@
 	border-color: transparent;
 	background-color: var(--grey-100);
 
-	background-image: url("./checkbox.svg");
+	background-image: url("../../public/images/checkbox.svg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: contain;
@@ -39,7 +39,7 @@
 }
 
 .checkbox__input:checked {
-	background-image: url("./checkbox-checked.svg");
+	background-image: url("../../public/images/checkbox-checked.svg");
 }
 
 .checkbox__errorMessage {
